# chip

./: .gitignore  README.md  secrets.example.toml
reproduction/: .gitignore  Makefile  README.md  config.yaml  pyproject.toml
reproduction/chip_repro/: __init__.py  logging_config.py  main.py
reproduction/chip_repro/pipeline/: __init__.py  aggregate.py  clean.py  estimate.py  fetch.py  normalize.py
reproduction/output/reports/: country_summary_20260201_160339.csv  report_20260201_135230.json  report_20260201_135230.md  report_20260201_135409.json  report_20260201_135409.md  report_20260201_140320.json  report_20260201_140320.md  report_20260201_141446.json  report_20260201_141446.md  report_20260201_160339.json  report_20260201_160339.md
workbench/: .gitignore  Makefile  README.md  config.yaml  pyproject.toml  run.sh
workbench/lib/: __init__.py  aggregate.py  cache.py  clean.py  config.py  fetcher.py  impute.py  logging_config.py  models.py  normalize.py  output.py  pipeline.py
workbench/scripts/: __init__.py  analyze_data_coverage.py  baseline.py  compare.py  coverage.py  nominal.py  timeseries.py
workbench/studies/baseline/: FINDINGS.md  README.md  config.yaml  study.py
workbench/studies/baseline/output/reports/: baseline_20260216_145001.md
workbench/studies/baseline/output/summaries/: baseline_20260216_145001.json
workbench/studies/coverage/: FINDINGS.md  README.md  config.yaml  study.py
workbench/studies/coverage/output/reports/: coverage_20260216_145010.md
workbench/studies/coverage/output/summaries/: coverage_20260216_145010.json
workbench/studies/nominal/: FINDINGS.md  README.md  study.py
workbench/studies/production/: FINDINGS.md  README.md  config.yaml  study.py
workbench/studies/production/output/reports/: production_20260216_160933.md  production_20260216_162812.md
workbench/studies/production/output/summaries/: production_20260216_160933.json  production_20260216_162812.json
workbench/studies/stability/: FINDINGS.md  README.md  config.yaml  study.py
workbench/studies/timeseries/: FINDINGS.md  README.md  config.yaml  study.py
workbench/studies/weighting/: FINDINGS.md  README.md  config.yaml  study.py
(+75 files in other folders)
