[project]
name = "chip-workbench"
version = "0.1.0"
description = "CHIP estimation workbench for exploratory analysis"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pandas>=1.5.0",
    "numpy>=1.21.0",
    "statsmodels>=0.14.0",
    "linearmodels>=5.0",
    "pyyaml>=6.0",
    "requests>=2.28.0",
    "pandas-datareader>=0.10.0",
    "openpyxl>=3.0.0",
    "xlrd>=2.0.0",
    "pyarrow>=10.0",
    "matplotlib>=3.5.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["lib*", "scripts*"]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I"]
